// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MeetupPaymentMethods should render correctly when editing 1`] = `
[
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        {
          "paddingBottom": 12,
        },
      ]
    }
  >
    <View
      style={
        {
          "backgroundColor": "#EAE3DF",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "height": 1,
          "marginRight": 8,
        }
      }
    />
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "color": "#7D675E",
            "fontFamily": "Baloo2-Bold",
            "fontSize": 20,
            "letterSpacing": 0.2,
            "lineHeight": 32,
            "marginRight": 4,
          },
          false,
        ]
      }
    >
      meetups
    </Text>
    <test-file-stub
      fill="#7D675E"
      style={
        [
          {
            "height": 24,
            "width": 24,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        {
          "backgroundColor": "#EAE3DF",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "height": 1,
          "marginLeft": 8,
        }
      }
    />
  </View>,
  <View
    style={{}}
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FEEDE5",
            "borderRadius": 12,
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": 8,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 8,
            "width": "100%",
          },
          {
            "borderColor": "transparent",
          },
          undefined,
        ]
      }
      testID="payment-details-checkbox"
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
            },
            false,
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              false,
            ]
          }
        >
          EINUNDZWANZIG
        </Text>
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "height": 20,
            "justifyContent": "center",
            "marginLeft": 16,
            "width": 20,
          }
        }
      >
        <test-file-stub
          fill="#F56522"
          style={
            [
              {
                "height": 24,
                "width": 24,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
          },
          {
            "marginTop": 4,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "borderColor": "#2B1911",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginLeft": 4,
              "marginRight": 4,
              "paddingLeft": 4,
              "paddingRight": 4,
            },
            {
              "marginTop": 4,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 14,
                  "letterSpacing": 0.5,
                  "lineHeight": 24,
                  "textTransform": "uppercase",
                },
              ],
              false,
            ]
          }
        >
          EUR
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`MeetupPaymentMethods should render correctly with available methods 1`] = `
[
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        {
          "paddingBottom": 12,
        },
      ]
    }
  >
    <View
      style={
        {
          "backgroundColor": "#EAE3DF",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "height": 1,
          "marginRight": 8,
        }
      }
    />
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "color": "#7D675E",
            "fontFamily": "Baloo2-Bold",
            "fontSize": 20,
            "letterSpacing": 0.2,
            "lineHeight": 32,
            "marginRight": 4,
          },
          false,
        ]
      }
    >
      meetups
    </Text>
    <test-file-stub
      fill="#7D675E"
      style={
        [
          {
            "height": 24,
            "width": 24,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        {
          "backgroundColor": "#EAE3DF",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "height": 1,
          "marginLeft": 8,
        }
      }
    />
  </View>,
  <View
    style={{}}
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FEEDE5",
            "borderRadius": 12,
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": 8,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 8,
            "width": "100%",
          },
          {
            "borderColor": "transparent",
          },
          undefined,
        ]
      }
      testID="payment-details-checkbox"
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
            },
            false,
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              false,
            ]
          }
        >
          EINUNDZWANZIG
        </Text>
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "height": 20,
            "justifyContent": "center",
            "marginLeft": 16,
            "width": 20,
          }
        }
      >
        <View
          style={
            {
              "borderColor": "#9F8C82",
              "borderRadius": 2,
              "borderWidth": 2,
              "height": 16,
              "width": 16,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
          },
          {
            "marginTop": 4,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "borderColor": "#2B1911",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginLeft": 4,
              "marginRight": 4,
              "paddingLeft": 4,
              "paddingRight": 4,
            },
            {
              "marginTop": 4,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 14,
                  "letterSpacing": 0.5,
                  "lineHeight": 24,
                  "textTransform": "uppercase",
                },
              ],
              false,
            ]
          }
        >
          EUR
        </Text>
      </View>
    </View>
  </View>,
  <View
    style={
      {
        "marginTop": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FEEDE5",
            "borderRadius": 12,
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": 8,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 8,
            "width": "100%",
          },
          {
            "borderColor": "transparent",
          },
          undefined,
        ]
      }
      testID="payment-details-checkbox"
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
            },
            false,
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              false,
            ]
          }
        >
          ZWEIUNDZWANZIG
        </Text>
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "height": 20,
            "justifyContent": "center",
            "marginLeft": 16,
            "width": 20,
          }
        }
      >
        <View
          style={
            {
              "borderColor": "#9F8C82",
              "borderRadius": 2,
              "borderWidth": 2,
              "height": 16,
              "width": 16,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
          },
          {
            "marginTop": 4,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "borderColor": "#2B1911",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginLeft": 4,
              "marginRight": 4,
              "paddingLeft": 4,
              "paddingRight": 4,
            },
            {
              "marginTop": 4,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 14,
                  "letterSpacing": 0.5,
                  "lineHeight": 24,
                  "textTransform": "uppercase",
                },
              ],
              false,
            ]
          }
        >
          EUR
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`MeetupPaymentMethods should render correctly with selected 1`] = `
[
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        {
          "paddingBottom": 12,
        },
      ]
    }
  >
    <View
      style={
        {
          "backgroundColor": "#EAE3DF",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "height": 1,
          "marginRight": 8,
        }
      }
    />
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "color": "#7D675E",
            "fontFamily": "Baloo2-Bold",
            "fontSize": 20,
            "letterSpacing": 0.2,
            "lineHeight": 32,
            "marginRight": 4,
          },
          false,
        ]
      }
    >
      meetups
    </Text>
    <test-file-stub
      fill="#7D675E"
      style={
        [
          {
            "height": 24,
            "width": 24,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        {
          "backgroundColor": "#EAE3DF",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "height": 1,
          "marginLeft": 8,
        }
      }
    />
  </View>,
  <View
    style={{}}
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FEEDE5",
            "borderRadius": 12,
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": 8,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 8,
            "width": "100%",
          },
          {
            "borderColor": "#F56522",
          },
          undefined,
        ]
      }
      testID="payment-details-checkbox"
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
            },
            false,
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              false,
            ]
          }
        >
          EINUNDZWANZIG
        </Text>
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "height": 20,
            "justifyContent": "center",
            "marginLeft": 16,
            "width": 20,
          }
        }
      >
        <test-file-stub
          fill="#F56522"
          style={
            [
              {
                "height": 24,
                "width": 24,
              },
              {
                "height": 20,
                "width": 20,
              },
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
          },
          {
            "marginTop": 4,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "borderColor": "#2B1911",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginLeft": 4,
              "marginRight": 4,
              "paddingLeft": 4,
              "paddingRight": 4,
            },
            {
              "marginTop": 4,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 14,
                  "letterSpacing": 0.5,
                  "lineHeight": 24,
                  "textTransform": "uppercase",
                },
              ],
              false,
            ]
          }
        >
          EUR
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`MeetupPaymentMethods should render correctly without available methods 1`] = `null`;
